// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactPlaceholder renders the content when it's ready 1`] = `
Array [
  <div>
    Some ready content
  </div>,
]
`;

exports[`ReactPlaceholder renders the placeholder only after the specified delay 1`] = `
Array [
  <TextBlock
    className={undefined}
    color="#CDCDCD"
    delay={10000}
    rows={2}
  />,
]
`;

exports[`ReactPlaceholder renders the placeholder when the content is not ready 1`] = `
Array [
  <TextBlock
    className={undefined}
    color="#CDCDCD"
    delay={0}
    rows={2}
  />,
]
`;
